# bzlmodRio-phoenix6

./: MODULE.bazel  WORKSPACE  maven_cpp_deps.bzl  maven_java_deps.bzl
.github/workflows/: auto_update.yml  build.yml  publish.yml
generate/: BUILD.bazel  MODULE.bazel  WORKSPACE  generate.py  get_phoenix6_dependencies.py  get_version.py  publish.py  vendor_dep.json
libraries/cpp/phoenix6-cpp/: BUILD.bazel
libraries/cpp/phoenix6-hal/: BUILD.bazel
libraries/java/wpiapi-java/: BUILD.bazel
private/cpp/api-cpp/: BUILD.bazel  shared.BUILD.bazel
private/cpp/api-cpp-replay/: BUILD.bazel
private/cpp/api-cpp-sim/: BUILD.bazel  shared.BUILD.bazel
private/cpp/simCANCoder/: BUILD.bazel
private/cpp/simPigeonIMU/: BUILD.bazel
private/cpp/simProCANcoder/: BUILD.bazel
private/cpp/simProCANdi/: BUILD.bazel
private/cpp/simProCANdle/: BUILD.bazel  shared.BUILD.bazel
private/cpp/simProCANrange/: BUILD.bazel
private/cpp/simProPigeon2/: BUILD.bazel
private/cpp/simProTalonFX/: BUILD.bazel
private/cpp/simProTalonFXS/: BUILD.bazel
private/cpp/simTalonFX/: BUILD.bazel
private/cpp/simTalonSRX/: BUILD.bazel
private/cpp/simVictorSPX/: BUILD.bazel
private/cpp/tools/: BUILD.bazel
private/cpp/tools-replay/: BUILD.bazel
private/cpp/tools-sim/: BUILD.bazel
private/cpp/wpiapi-cpp/: BUILD.bazel
private/cpp/wpiapi-cpp-replay/: BUILD.bazel
private/cpp/wpiapi-cpp-sim/: BUILD.bazel
private/non_bzlmod_dependencies/: download_dependencies.bzl  setup_dependencies.bzl
tests/: MODULE.bazel  WORKSPACE
tests/cpp/phoenix6-cpp/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/phoenix6-hal/: BUILD.bazel  main.cpp  test.cpp
tests/java/wpiapijava/: BUILD.bazel  BasicTest.java  Main.java
tests/robot-cpp/subsystems/: BUILD  drivetrain.cpp  drivetrain.hpp  elevator.cpp  elevator.hpp  ports.hpp  shooter.cpp  shooter.hpp
tests/robot-java/src/main/java/frc/robot/subsystems/: BUILD  DriveTrain.java  Elevator.java  Shooter.java
