module(
    name = "bzlmodrio-phoenix6",
    version = "26.1.1",
    compatibility_level = 2026,
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2025-1.bcr5")
bazel_dep(name = "rules_bzlmodrio_jdk", version = "17.0.12-7.bcr1")
bazel_dep(name = "bzlmodrio-allwpilib", version = "2026.1.1")
bazel_dep(name = "bzlmodrio-opencv", version = "2025.4.10.0-3.bcr3")
bazel_dep(name = "bzlmodrio-ni", version = "2026.1.0")

setup_bzlmodrio_phoenix6_cpp_dependencies = use_extension("//:maven_cpp_deps.bzl", "setup_bzlmodrio_phoenix6_cpp_dependencies")
use_repo(
    setup_bzlmodrio_phoenix6_cpp_dependencies,
    "bazelrio_com_ctre_phoenix6_api-cpp_linuxarm64",
    "bazelrio_com_ctre_phoenix6_api-cpp_linuxathena",
    "bazelrio_com_ctre_phoenix6_api-cpp_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_api-cpp_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_sim_api-cpp-sim_linuxarm64",
    "bazelrio_com_ctre_phoenix6_sim_api-cpp-sim_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_sim_api-cpp-sim_osxuniversal",
    "bazelrio_com_ctre_phoenix6_sim_api-cpp-sim_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simpigeonimu_headers",
    "bazelrio_com_ctre_phoenix6_sim_simpigeonimu_linuxarm64",
    "bazelrio_com_ctre_phoenix6_sim_simpigeonimu_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simpigeonimu_osxuniversal",
    "bazelrio_com_ctre_phoenix6_sim_simpigeonimu_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simprocancoder_headers",
    "bazelrio_com_ctre_phoenix6_sim_simprocancoder_linuxarm64",
    "bazelrio_com_ctre_phoenix6_sim_simprocancoder_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simprocancoder_osxuniversal",
    "bazelrio_com_ctre_phoenix6_sim_simprocancoder_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simprocandi_headers",
    "bazelrio_com_ctre_phoenix6_sim_simprocandi_linuxarm64",
    "bazelrio_com_ctre_phoenix6_sim_simprocandi_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simprocandi_osxuniversal",
    "bazelrio_com_ctre_phoenix6_sim_simprocandi_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simprocandle_headers",
    "bazelrio_com_ctre_phoenix6_sim_simprocandle_linuxarm64",
    "bazelrio_com_ctre_phoenix6_sim_simprocandle_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simprocandle_osxuniversal",
    "bazelrio_com_ctre_phoenix6_sim_simprocandle_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simprocanrange_headers",
    "bazelrio_com_ctre_phoenix6_sim_simprocanrange_linuxarm64",
    "bazelrio_com_ctre_phoenix6_sim_simprocanrange_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simprocanrange_osxuniversal",
    "bazelrio_com_ctre_phoenix6_sim_simprocanrange_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simpropigeon2_headers",
    "bazelrio_com_ctre_phoenix6_sim_simpropigeon2_linuxarm64",
    "bazelrio_com_ctre_phoenix6_sim_simpropigeon2_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simpropigeon2_osxuniversal",
    "bazelrio_com_ctre_phoenix6_sim_simpropigeon2_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simprotalonfx_headers",
    "bazelrio_com_ctre_phoenix6_sim_simprotalonfx_linuxarm64",
    "bazelrio_com_ctre_phoenix6_sim_simprotalonfx_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simprotalonfx_osxuniversal",
    "bazelrio_com_ctre_phoenix6_sim_simprotalonfx_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simprotalonfxs_headers",
    "bazelrio_com_ctre_phoenix6_sim_simprotalonfxs_linuxarm64",
    "bazelrio_com_ctre_phoenix6_sim_simprotalonfxs_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simprotalonfxs_osxuniversal",
    "bazelrio_com_ctre_phoenix6_sim_simprotalonfxs_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simtalonsrx_headers",
    "bazelrio_com_ctre_phoenix6_sim_simtalonsrx_linuxarm64",
    "bazelrio_com_ctre_phoenix6_sim_simtalonsrx_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simtalonsrx_osxuniversal",
    "bazelrio_com_ctre_phoenix6_sim_simtalonsrx_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simvictorspx_headers",
    "bazelrio_com_ctre_phoenix6_sim_simvictorspx_linuxarm64",
    "bazelrio_com_ctre_phoenix6_sim_simvictorspx_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_sim_simvictorspx_osxuniversal",
    "bazelrio_com_ctre_phoenix6_sim_simvictorspx_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_sim_tools-sim_headers",
    "bazelrio_com_ctre_phoenix6_sim_tools-sim_linuxarm64",
    "bazelrio_com_ctre_phoenix6_sim_tools-sim_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_sim_tools-sim_osxuniversal",
    "bazelrio_com_ctre_phoenix6_sim_tools-sim_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_sim_wpiapi-cpp-sim_headers",
    "bazelrio_com_ctre_phoenix6_sim_wpiapi-cpp-sim_linuxarm64",
    "bazelrio_com_ctre_phoenix6_sim_wpiapi-cpp-sim_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_sim_wpiapi-cpp-sim_osxuniversal",
    "bazelrio_com_ctre_phoenix6_sim_wpiapi-cpp-sim_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_tools_headers",
    "bazelrio_com_ctre_phoenix6_tools_linuxarm64",
    "bazelrio_com_ctre_phoenix6_tools_linuxathena",
    "bazelrio_com_ctre_phoenix6_tools_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_tools_windowsx86-64",
    "bazelrio_com_ctre_phoenix6_wpiapi-cpp_headers",
    "bazelrio_com_ctre_phoenix6_wpiapi-cpp_linuxarm64",
    "bazelrio_com_ctre_phoenix6_wpiapi-cpp_linuxathena",
    "bazelrio_com_ctre_phoenix6_wpiapi-cpp_linuxx86-64",
    "bazelrio_com_ctre_phoenix6_wpiapi-cpp_windowsx86-64",
)

setup_bzlmodrio_phoenix6_java_dependencies = use_extension("//:maven_java_deps.bzl", "setup_bzlmodrio_phoenix6_java_dependencies")
use_repo(
    setup_bzlmodrio_phoenix6_java_dependencies,
    "com_ctre_phoenix6_wpiapi_java",
)
