load("@rules_cc//cc:defs.bzl", "cc_library")

alias(
    name = "phoenix6-cpp",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "shared",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:shared",
        "@bzlmodrio-phoenix6//libraries/cpp/phoenix6-hal:shared",
    ] +
    # Binaries
    select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": [
            "//private/cpp/wpiapi-cpp:shared",
        ],
        "//conditions:default": [
            "//private/cpp/wpiapi-cpp-sim:shared",
        ],
    }),
)
