load("@rules_java//java:defs.bzl", "java_import")

java_import(
    name = "wpiapi-java",
    jars = ["@com_ctre_phoenix6_wpiapi_java//jar:file"],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib//libraries/java/wpilibj",
        "@bzlmodrio-phoenix6//libraries/cpp/phoenix6-hal:jni",
    ],
)
