load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "shared_interface",
    srcs = select({
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_ctre_phoenix6_sim_simtalonsrx_windowsx86-64//:shared_interface"],
    }),
    linkstatic = True,
    tags = ["manual"],
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-phoenix6//:__subpackages__"],
    deps = ["@bazelrio_com_ctre_phoenix6_sim_simtalonsrx_headers//:headers"],
)

alias(
    name = "header_files",
    actual = "@bazelrio_com_ctre_phoenix6_sim_simtalonsrx_headers//:header_files",
    visibility = ["@bzlmodrio-phoenix6//:__subpackages__"],
)

filegroup(
    name = "shared_raw",
    srcs = select({
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_com_ctre_phoenix6_sim_simtalonsrx_linuxx86-64//:shared"],
        "@rules_bazelrio//conditions:osx": ["@bazelrio_com_ctre_phoenix6_sim_simtalonsrx_osxuniversal//:shared"],
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_ctre_phoenix6_sim_simtalonsrx_windowsx86-64//:shared"],
    }),
    visibility = ["@bzlmodrio-phoenix6//:__subpackages__"],
)

cc_library(
    name = "shared",
    srcs = [":shared_raw"],
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-phoenix6//:__subpackages__"],
    deps = [] + select({
        "@rules_bazelrio//conditions:windows": [":shared_interface"],
        "//conditions:default": [],
    }) + ["@bazelrio_com_ctre_phoenix6_sim_simtalonsrx_headers//:headers"],
    alwayslink = 1,
)
